# workmate-agent

./: .gitignore  README.md  config.py  ingest.py  main.py  pyproject.toml  vectorstore.py
docs/: langchain_notes.md  langgraph_notes.md
src/: __init__.py  agent.py  state.py  utils.py
